<resources>
    <string name="app_name">Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="fragment_3">Fragment 3</string>
    <string name="change_color">Change color</string>
    <string name="change_fragment">Change fragment</string>
    <string name="hint">Please enter the message</string>
    <string name="create">Create</string>
    <string name="letters_and_numbers">ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="dialog">Dialog</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="start_dialog">Start Dialog</string>
</resources>